platform/cilium-config/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https
  namespace: kube-system
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: kube-system
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "argocd.lab.noah-gallo.com"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "hubble.lab.noah-gallo.com"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
